--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    background-color: #a86d14;
+    color: #ccddba;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
 img{
     width: 300px;
     height: fit-content;
@@ -7,22 +13,23 @@ img{
     align-content: center;
 }
 
-.description{
+.description,
+.directions{
     background-color: #ece494;
+    color:#20251b;
 }
 
 .ingredients{
-    background-color: #97db17;
-}
-
-.directions{
     background-color: #eccf72;
+    color:#20251b;
 }
 
 .header{
-    font-size:20px;
+    font-size:26px;
 }
 
-.content{
-    font-size:13px;
+.contents,
+.contents li{
+    font-size: 20px;
 }
+
